--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button class="btn-proximo"data-proximo="3">Cenário 3</button>
         <button class="btn-proximo"data-proximo="4">Cenário 4</button>
     </div>
- </main>   
+ </main>  
+ <script src="script.js"></script>
 </body>
 </html>
